<resources>
    <string name="app_name">Self Study</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="home">HOME</string>
    <string name="tests">TESTS</string>
    <string name="analysis">ANALYSIS</string>
    <string name="doubts">DOUBTS</string>
    <string name="profile">PROFILE</string>

    <string name="top_banner_condition_text">COMPLETE 100% SYLLABUS</string>
    <string name="get">GET\u0020</string>
    <string name="refund_percentage">100%\u0020</string>
    <string name="refund">REFUND</string>
    <string name="terms_and_condition">Terms&#38; Condition Apply</string>
    <string name="your_free_trial_expired_on">Your free trial expired on\u0020</string>
    <string name="expiration_date">29 Jan 2019</string>
    <string name="please_upgrade_now_to_get_full_access">please upgrade now to get full access</string>
    <string name="upgrade_now">UPGRADE NOW</string>
    <string name="progress">Progress</string>
    <string name="trophy">trophy</string>
    <string name="wallet">wallet</string>
</resources>
