<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_account_box_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/tests"
        android:icon="@drawable/ic_account_box_24dp"
        android:title="@string/tests"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/analysis"
        android:icon="@drawable/ic_account_box_24dp"
        android:title="@string/analysis"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/doubts"
        android:icon="@drawable/ic_account_box_24dp"
        android:title="@string/doubts"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_box_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        />
</menu>